--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,14 @@
   <name>e2e</name>
   <!--  FIXME change it to the project's website  -->
   <url>http://www.example.com</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <!--     <properties> -->
   <!--
-         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
  -->
   <!--         <maven.compiler.source>1.7</maven.compiler.source> -->
   <!--         <maven.compiler.target>1.7</maven.compiler.target> -->
@@ -33,12 +38,12 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>3.141.59</version>
+      <version>4.0.0-alpha-1</version>
     </dependency>
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>6.14.3</version>
+      <version>7.0.0-beta7</version>
       <scope>test</scope>
     </dependency>
     <dependency>
