--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,68 @@
-.idea
+##########################
+## Java
+##########################
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+*.log
+
+##########################
+## Maven
+##########################
+target/
+
+##########################
+## IntelliJ
+##########################
+*.iml
+.idea/
+*.ipr
+*.iws
+out/
+.idea_modules/
+
+##########################
+## Eclipse
+##########################
+.metadata
+.classpath
+.project
+.settings/
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.loadpath
+
+##########################
+## NetBeans
+##########################
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+##########################
+## OS X
+##########################
+.DS_Store
+
+##########################
+## Compressed file
+##########################
+*.zip
+*.tar.gz
+*.rar
+
+#########################
+## Environmental Settings
+#########################
+.env.sample
