--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,6 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-  <!--     <properties> -->
-  <!--
-
- -->
-  <!--         <maven.compiler.source>1.7</maven.compiler.source> -->
-  <!--         <maven.compiler.target>1.7</maven.compiler.target> -->
-  <!--     </properties> -->
   <build>
     <pluginManagement>
       <plugins>
@@ -38,7 +31,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.0.0-alpha-1</version>
+      <version>4.0.0-alpha-2</version>
     </dependency>
     <dependency>
       <groupId>org.testng</groupId>
@@ -51,6 +44,11 @@
       <artifactId>testng</artifactId>
       <version>7.0.0-beta7</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-server</artifactId>
+      <version>3.141.59</version>
     </dependency>
   </dependencies>
 </project>
