Add Extent Test report. When the test runs, we can see visual reporting for tests and see fail tests with a screenshot.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,15 @@ nb-configuration.xml
 ## Environmental Settings
 #########################
 .env.sample
+
+
+#########################
+## Logs and Reports
+#########################
+/ExtentReports/*
+
+
+#########################
+## git
+#########################
+!*.gitkeep
