Create index page object pattern * Implement the corresponding page object model * Define the Index Test * Add checkIndexPageResponseCode and checkIndexPageHeader Tests

--- a/resources/elements.properties
+++ b/resources/elements.properties
@@ -1,3 +1,9 @@
+#---------------------- / Index /---------------------------
+index.pageTitle.type=css_selector
+index.pageTitle=#app > div > div > div:nth-child(1) > div > div > h3
+index.joinNowButton.type=css_selector
+index.joinNowButton=#app > div > div > div.row > a:nth-child(1)
+
 #---------------------- / WorkerProfile /---------------------------
 workerProfile.country=country
 workerProfile.firstName=firstName
