Create corporation profile page object pattern * Implement the corresponding page object model * Define the Corporation Profile Test * Add checkCorporationPageResponseCode, checkCorporationPageHeader and checkCorporationPageCancelButton Tests

--- a/resources/elements.properties
+++ b/resources/elements.properties
@@ -15,3 +15,9 @@ workerProfile.agreeBtn.type=css_selector
 workerProfile.agreeBtn=#app > div > div > div.container > div > div.column.four > div > div > form > div > div:nth-child(10) > div > button
 workerProfile.verification.type=css_selector
 workerProfile.verification=#app > div > div > div.container > div > div.column.four > div > form > div > div > div > div:nth-child(1) > div > p.wow-form__label
+
+#---------------------- / CorporationProfile /---------------------------
+corporationProfile.pageTitle.type=css_selector
+corporationProfile.pageTitle=#app > div > div > div:nth-child(2) > div:nth-child(2) > div > div:nth-child(1) > div > h4
+corporationProfile.cancelButton.type=css_selector
+corporationProfile.cancelButton=#app > div > div > div:nth-child(2) > div:nth-child(2) > div > div:nth-child(6) > div:nth-child(2) > button.wow-button.wow-button--primary.wow-button--small.wow-button--outlined
